y.output
   0  $accept : program $end

   1  program :
   2          | extdefs

   3  extdefs : extdef
   4          | extdefs extdef

   5  extdef : TYPESPEC notype_declarator ';'

   6  $$1 :

   7  $$2 :

   8  $$3 :

   9  extdef : notype_declarator $$1 '{' xdecls $$2 stmts $$3 '}'
  10         | error ';'
  11         | ';'

  12  expr_no_commas : primary
  13                 | expr_no_commas '+' expr_no_commas
  14                 | expr_no_commas '=' expr_no_commas
  15                 | expr_no_commas '*' expr_no_commas
  16                 | expr_no_commas ARITHCOMPARE expr_no_commas

  17  primary : IDENTIFIER
  18          | CONSTANT

  19  notype_declarator : notype_declarator '(' parmlist ')'
  20                    | IDENTIFIER

  21  parmlist :
  22           | parms

  23  parms : parm
  24        | parms ',' parm

  25  parm : TYPESPEC notype_declarator

  26  stmts : stmt
  27        | stmts stmt

  28  stmt : expr_no_commas ';'

  29  xdecls :
  30         | decls

  31  decls : decl
  32        | decls decl

  33  decl : TYPESPEC notype_declarator ';'

state 0
	$accept : . program $end  (0)
	program : .  (1)

	error  shift 1
	IDENTIFIER  shift 2
	TYPESPEC  shift 3
	';'  shift 4
	$end  reduce 1

	program  goto 5
	notype_declarator  goto 6
	extdefs  goto 7
	extdef  goto 8


state 1
	extdef : error . ';'  (10)

	';'  shift 9
	.  error


state 2
	notype_declarator : IDENTIFIER .  (20)

	.  reduce 20


state 3
	extdef : TYPESPEC . notype_declarator ';'  (5)

	IDENTIFIER  shift 2
	.  error

	notype_declarator  goto 10


state 4
	extdef : ';' .  (11)

	.  reduce 11


state 5
	$accept : program . $end  (0)

	$end  accept


state 6
	extdef : notype_declarator . $$1 '{' xdecls $$2 stmts $$3 '}'  (9)
	notype_declarator : notype_declarator . '(' parmlist ')'  (19)
	$$1 : .  (6)

	'('  shift 11
	'{'  reduce 6

	$$1  goto 12


state 7
	program : extdefs .  (2)
	extdefs : extdefs . extdef  (4)

	error  shift 1
	IDENTIFIER  shift 2
	TYPESPEC  shift 3
	';'  shift 4
	$end  reduce 2

	notype_declarator  goto 6
	extdef  goto 13


state 8
	extdefs : extdef .  (3)

	.  reduce 3


state 9
	extdef : error ';' .  (10)

	.  reduce 10


state 10
	extdef : TYPESPEC notype_declarator . ';'  (5)
	notype_declarator : notype_declarator . '(' parmlist ')'  (19)

	';'  shift 14
	'('  shift 11
	.  error


state 11
	notype_declarator : notype_declarator '(' . parmlist ')'  (19)
	parmlist : .  (21)

	TYPESPEC  shift 15
	')'  reduce 21

	parmlist  goto 16
	parms  goto 17
	parm  goto 18


state 12
	extdef : notype_declarator $$1 . '{' xdecls $$2 stmts $$3 '}'  (9)

	'{'  shift 19
	.  error


state 13
	extdefs : extdefs extdef .  (4)

	.  reduce 4


state 14
	extdef : TYPESPEC notype_declarator ';' .  (5)

	.  reduce 5


state 15
	parm : TYPESPEC . notype_declarator  (25)

	IDENTIFIER  shift 2
	.  error

	notype_declarator  goto 20


state 16
	notype_declarator : notype_declarator '(' parmlist . ')'  (19)

	')'  shift 21
	.  error


state 17
	parmlist : parms .  (22)
	parms : parms . ',' parm  (24)

	','  shift 22
	')'  reduce 22


state 18
	parms : parm .  (23)

	.  reduce 23


state 19
	extdef : notype_declarator $$1 '{' . xdecls $$2 stmts $$3 '}'  (9)
	xdecls : .  (29)

	TYPESPEC  shift 23
	IDENTIFIER  reduce 29
	CONSTANT  reduce 29

	xdecls  goto 24
	decls  goto 25
	decl  goto 26


state 20
	notype_declarator : notype_declarator . '(' parmlist ')'  (19)
	parm : TYPESPEC notype_declarator .  (25)

	'('  shift 11
	','  reduce 25
	')'  reduce 25


state 21
	notype_declarator : notype_declarator '(' parmlist ')' .  (19)

	.  reduce 19


state 22
	parms : parms ',' . parm  (24)

	TYPESPEC  shift 15
	.  error

	parm  goto 27


state 23
	decl : TYPESPEC . notype_declarator ';'  (33)

	IDENTIFIER  shift 2
	.  error

	notype_declarator  goto 28


state 24
	extdef : notype_declarator $$1 '{' xdecls . $$2 stmts $$3 '}'  (9)
	$$2 : .  (7)

	.  reduce 7

	$$2  goto 29


state 25
	xdecls : decls .  (30)
	decls : decls . decl  (32)

	TYPESPEC  shift 23
	IDENTIFIER  reduce 30
	CONSTANT  reduce 30

	decl  goto 30


state 26
	decls : decl .  (31)

	.  reduce 31


state 27
	parms : parms ',' parm .  (24)

	.  reduce 24


state 28
	notype_declarator : notype_declarator . '(' parmlist ')'  (19)
	decl : TYPESPEC notype_declarator . ';'  (33)

	';'  shift 31
	'('  shift 11
	.  error


state 29
	extdef : notype_declarator $$1 '{' xdecls $$2 . stmts $$3 '}'  (9)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	.  error

	primary  goto 34
	expr_no_commas  goto 35
	stmts  goto 36
	stmt  goto 37


state 30
	decls : decls decl .  (32)

	.  reduce 32


state 31
	decl : TYPESPEC notype_declarator ';' .  (33)

	.  reduce 33


state 32
	primary : IDENTIFIER .  (17)

	.  reduce 17


state 33
	primary : CONSTANT .  (18)

	.  reduce 18


state 34
	expr_no_commas : primary .  (12)

	.  reduce 12


state 35
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (13)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (14)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (15)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (16)
	stmt : expr_no_commas . ';'  (28)

	';'  shift 38
	'='  shift 39
	ARITHCOMPARE  shift 40
	'+'  shift 41
	'*'  shift 42
	.  error


state 36
	extdef : notype_declarator $$1 '{' xdecls $$2 stmts . $$3 '}'  (9)
	stmts : stmts . stmt  (27)
	$$3 : .  (8)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'}'  reduce 8

	primary  goto 34
	expr_no_commas  goto 35
	$$3  goto 43
	stmt  goto 44


state 37
	stmts : stmt .  (26)

	.  reduce 26


state 38
	stmt : expr_no_commas ';' .  (28)

	.  reduce 28


state 39
	expr_no_commas : expr_no_commas '=' . expr_no_commas  (14)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	.  error

	primary  goto 34
	expr_no_commas  goto 45


state 40
	expr_no_commas : expr_no_commas ARITHCOMPARE . expr_no_commas  (16)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	.  error

	primary  goto 34
	expr_no_commas  goto 46


state 41
	expr_no_commas : expr_no_commas '+' . expr_no_commas  (13)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	.  error

	primary  goto 34
	expr_no_commas  goto 47


state 42
	expr_no_commas : expr_no_commas '*' . expr_no_commas  (15)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	.  error

	primary  goto 34
	expr_no_commas  goto 48


state 43
	extdef : notype_declarator $$1 '{' xdecls $$2 stmts $$3 . '}'  (9)

	'}'  shift 49
	.  error


state 44
	stmts : stmts stmt .  (27)

	.  reduce 27


state 45
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (13)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (14)
	expr_no_commas : expr_no_commas '=' expr_no_commas .  (14)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (15)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (16)

	'='  shift 39
	ARITHCOMPARE  shift 40
	'+'  shift 41
	'*'  shift 42
	';'  reduce 14


state 46
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (13)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (14)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (15)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (16)
	expr_no_commas : expr_no_commas ARITHCOMPARE expr_no_commas .  (16)

	'+'  shift 41
	'*'  shift 42
	';'  reduce 16
	'='  reduce 16
	ARITHCOMPARE  reduce 16


state 47
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (13)
	expr_no_commas : expr_no_commas '+' expr_no_commas .  (13)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (14)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (15)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (16)

	'*'  shift 42
	';'  reduce 13
	'='  reduce 13
	ARITHCOMPARE  reduce 13
	'+'  reduce 13


state 48
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (13)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (14)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (15)
	expr_no_commas : expr_no_commas '*' expr_no_commas .  (15)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (16)

	.  reduce 15


state 49
	extdef : notype_declarator $$1 '{' xdecls $$2 stmts $$3 '}' .  (9)

	.  reduce 9


41 terminals, 18 nonterminals
34 grammar rules, 50 states
